// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailedMessagesDisplay > renders info messages with info-level color 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Debug Console (F12 to close | F4 to search)                                  │
│                                                                              │
│ All(1)*  Log(0)  Info(1)  Warn(0)  Error(0)  Debug(0)                        │
│ Alt+1-6 to filter by level                                                   │
│                                                                              │
│ ℹ  Info message                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`DetailedMessagesDisplay > renders message counts 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│ All(1)*  Log(1)  Info(0)  Warn(0)  Error(0)  Debug(0)                        │
│                                                                              │
│ Alt+1-6 to filter by level                                                   │
│ ℹ  Repeated message (x5)                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`DetailedMessagesDisplay > renders messages correctly 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Debug Console (F12 to close | F4 to search)                                  │
│                                                                              │
│ All(4)*  Log(1)  Info(1)  Warn(1)  Error(1)  Debug(0)                        │
│ Alt+1-6 to filter by level                                                   │
│                                                                              │
│ ℹ  Log message                                                               │
│ ℹ  Info message                                                              │
│ ⚠  Warning message                                                           │
│ ✖  Error message                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;
